manifests/homelab-root/ingress.yaml
# homelab-argo/manifests/certs/cloudflare-clusterissuer.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd 
spec:
  entryPoints:
    - websecure 
  routes:
    - match: Host(`argo.seanchoo.top`)
      kind: Rule
      services:
        - name: argocd-server 
          port: 443 
  tls:
    secretName: argocd-server-tls
